--- a/.gitignore
+++ b/.gitignore
@@ -2,78 +2,49 @@
 node_modules/
 npm-debug.log
 yarn-error.log
-yarn-debug.log
-.pnpm-debug.log
-.yarn/
-.pnp.*
+package-lock.json
+yarn.lock
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-venv/
-ENV/
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Dependency directories
-.idea/
-.vscode/
-*.swp
-*.swo
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# API keys and secrets
+# Arquivos de ambiente
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-config.py
 
-# Build files
-/build/
-/dist/
+# Arquivos de sistema
+.DS_Store
+Thumbs.db
+desktop.ini
 
-# Coverage directory
-/coverage/
+# Arquivos de log
+*.log
+logs/
 
-# Temporary files
-/tmp/
-/temp/
+# Arquivos temporários
+*.tmp
+*.temp
+.cache/
+tmp/
+
+# Arquivos de build
+dist/
+build/
+out/
+
+# Arquivos de IDE e editores
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+*.swp
+*.swo
+
+# Arquivos de backup
+*.bak
+*.backup
+*~
+
+# Outros
+.vercel
+.netlify
