--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,1 @@
-# Node.js
-node_modules/
-npm-debug.log
-yarn-error.log
-package-lock.json
-yarn.lock
-
-# Arquivos de ambiente
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Arquivos de sistema
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# Arquivos de log
-*.log
-logs/
-
-# Arquivos temporários
-*.tmp
-*.temp
-.cache/
-tmp/
-
-# Arquivos de build
-dist/
-build/
-out/
-
-# Arquivos de IDE e editores
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
-*.swp
-*.swo
-
-# Arquivos de backup
-*.bak
-*.backup
-*~
-
-# Outros
-.vercel
-.netlify
-
-.gitignore
+!.gitignore
