--- a/services/aceitaBitcoin.service
+++ b/services/aceitaBitcoin.service
@@ -3,7 +3,7 @@ Description=Aceita Bitcoin Service
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/python3 /home/admin/aceitaBitcoin/server.py
+ExecStart=/bin/bash -c 'source /home/admin/aceitaBitcoin/venv/bin/activate && python3 /home/admin/aceitaBitcoin/app.py'
 WorkingDirectory=/home/admin/aceitaBitcoin
 Restart=always
 User=admin
